--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install yarn dependencies
-          run: yarn
+        run: |
+          yarn
       - name: Run tests
-          run: yarn test --coverage
-          run: bash <(curl -s https://codecov.io/bash)
+        run: |
+          yarn test
+        run: |
+          bash <(curl -s https://codecov.io/bash)
