--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
   },
   "jest": {
     "preset": "react-native",
+    "collectCoverage": true,
+    "coverageReporters": [
+      "html",
+      "lcov"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
