--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "device": "react-native run-ios --device",
-    "test": "jest",
+    "test": "jest --coverage",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
@@ -35,6 +35,10 @@
   "jest": {
     "preset": "react-native",
     "collectCoverage": true,
+    "coverageReporters": [
+      "html",
+      "lcov"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
