Apply jest min coverage at 80%

--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
       "html",
       "lcov"
     ],
+    "global": {
+      "branches": 80,
+      "functions": 80,
+      "lines": 80,
+      "statements": 80
+    },
     "moduleFileExtensions": [
       "ts",
       "tsx",
