--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
       "html",
       "lcov"
     ],
-    "global": {
+    "globals": {
       "branches": 80,
       "functions": 80,
       "lines": 80,
