Update lint command assing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         run: |
           yarn
-      - name: Run Lint
+      - name: Run lint
         run: |
           yarn lint
       - name: Run tests
