--- a/ios/ConsultaRemediosClone/Info.plist
+++ b/ios/ConsultaRemediosClone/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>ConsultaRemediosClone</string>
+	<string>CR Clone</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
