--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,6 +3,11 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 
+project 'ConsultaRemediosClone',
+'ConsultaRemediosClone Debug' => :debug,
+'ConsultaRemediosClone Staing' => :debug,
+'ConsultaRemediosClone' => :release
+
 target 'ConsultaRemediosClone' do
   config = use_native_modules!
 
