--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.3",
-    "react-native-dotenv": "^2.4.2"
+    "react-native": "0.63.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -25,7 +24,6 @@
     "@testing-library/react-native": "^7.1.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
-    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
