--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,16 @@ jobs:
         run: |
           yarn
       - name: Generate env file
-        run: ./shell/generate_env_file.sh
+          uses: DamianReeves/write-file-action
+          with:
+            path: ${{ env.home}}/.env.js
+            contents: |
+              echo "
+                export default {
+                  product_name: '${{ secrets.PRODUCT_NAME }}',
+                };
+              "
+            write-mode: overwrite
       - name: Run lint
         run: |
           yarn lint
