--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         run: |
           yarn
-      - name: Generate env file
-          uses: DamianReeves/write-file-action
+      - name: Write ENV file
+        uses: DamianReeves/write-file-action@v1.0
           with:
             path: ${{ env.home}}/.env.js
             contents: |
