--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,8 @@ jobs:
     steps:
       - name: Checkout main branch
         uses: actions/checkout@v2
-      - name: Write ENV file
-      - uses: DamianReeves/write-file-action
-        with:
-          path: ${{ env.home}}/.bashrc
-          contents: |
-            echo "Hello World!"
-          write-mode: append
+      - name: Write File
+          uses: DamianReeves/write-file-action@v1.0
       - name: Install yarn dependencies
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
