--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
           path: ${{ env.home}}/env.json
           contents: |
             echo "Hello World!"
-          write-mode: overwrite
+          write-mode: preserve
       - name: Checkout main branch
         uses: actions/checkout@v2
       - name: Install yarn dependencies
