--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
           };
           " >> env.js
           cat env.js
+      - name: Run lint
+        run: |
+          yarn lint
       - name: Run tests
         run: |
           yarn test
