--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,7 @@ jobs:
           yarn lint
       - name: Create env file
         run: |
-          sed
-          -e s/CI_PRODUCT_NAME/${{ secrets.PRODUCT_NAME }}/g
-          env.example.js > env.js
+          sed -e s/CI_PRODUCT_NAME/${{ secrets.PRODUCT_NAME }}/g env.example.js > env.js
       - name: Run tests
         run: |
           yarn test
