Enable htm and lcov only

--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
   "jest": {
     "preset": "react-native",
     "collectCoverage": true,
+    "coverageReporters": [
+      "html",
+      "lcov"
+    ],
     "globals": {
       "branches": 80,
       "functions": 80,
